# paifu_gen

./: .gitignore  Cargo.toml  README.md  index.html  package.json
.github/workflows/: build.yml
log-viewer/: README.md
src/: lib.rs
www/: index.html
