[package]
name = "paifu_gen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
libriichi = { git = "https://github.com/ashleney/libriichi" }

getrandom = { version = "0.3", features = ["wasm_js"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.145"
